# CausalBoundingEngine

./: .gitignore  .readthedocs.yml  LICENSE  MANIFEST.in  Makefile  README.md  TESTING.md  example.ipynb  pyproject.toml  pytest.ini  requirements.txt  run_basic_tests.py  test.ipynb
causalboundingengine/: scenario.py  scenarios.py
causalboundingengine/algorithms/: algorithm.py  autobound.py  causaloptim.py  entropybounds.py  manski.py  tianpearl.py  zaffalonbounds.py  zhangbareinboim.py
causalboundingengine/algorithms/autobound_pkg/autobound/: causalProblem.py
causalboundingengine/algorithms/conf/: manski.py
causalboundingengine/algorithms/zaffalonbounds_util/: zaffalon_setup.py
causalboundingengine/algorithms/zaffalonbounds_util/java/: BinaryConfBounds.java  BinaryIVBounds.java  BinaryIVTask.java
causalboundingengine/algorithms/zaffalonbounds_util/zaffalon/: BinaryConfBounds.java  BinaryIVBounds.java  BinaryIVTask.java
causalboundingengine/scenarios/: scenario.py  scenarios.py
causalboundingengine/scenarios/confounding/: binaryconf.py
causalboundingengine/utils/: alg_util.py  data.py  r_utils.py
docs/: requirements.txt
docs/source/: algorithms.rst  api_reference.rst  conf.py  contributing.rst  core_concepts.rst  examples.rst  extending.rst  index.rst  installation.rst  quickstart.rst  references.rst  requirements.txt  scenarios.rst  user_guide.rst
tests/: conftest.py  test_algorithms.py  test_core_algorithms.py  test_dummy.py  test_integration.py  test_iv_scenarios.py  test_scenarios.py
