[project]
name = "causalboundingengine"
version = "0.1.0"
description = "A framework for causal bounding algorithms"
authors = [{ name = "Tobias Maringgele", email = "tobias.maringgele@tum.de" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
  "pandas",
  "numpy",
  "cvxpy",
  "pulp",
  "statsmodels",
  "highspy",
  "pyomo"
]

[project.optional-dependencies]
r = ["rpy2"]
java = ["jpype1"]
full = ["rpy2", "jpype1"]
docs = [
  "sphinx",
  "sphinx_rtd_theme",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["causalboundingengine*"]
